build.grade: update groupName, OpenCensus version to 0.18.0
* Fixed groupName from
  "io.opencensus.integration"
to
  "io.orijtech.integrations"

* Updated OpenCensus Java version to v0.18.0 which is
currently the latest

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'maven'
 apply plugin: "net.ltgt.errorprone"
 apply plugin: "signing"
 
-group = "io.opencensus.integration"
+group = "io.orijtech.integrations"
 version = "0.0.1" // CURRENT_OCSPYMEMCACHED_VERSION
 
 sourceCompatibility = 1.8
@@ -38,13 +38,13 @@ buildscript {
     }
 }
 
-def opencensusVersion = '0.16.1'
 def errorProneVersion = '2.3.1'
 def findBugsJsr305Version = '3.0.2'
 
 dependencies {
-    compile "io.opencensus:opencensus-api:${opencensusVersion}"
-    runtime "io.opencensus:opencensus-impl:${opencensusVersion}"
+    // https://mvnrepository.com/artifact/io.opencensus/opencensus-api
+    compile group: 'io.opencensus', name: 'opencensus-api', version: '0.18.0'
+    runtime group: 'io.opencensus', name: 'opencensus-impl', version: '0.18.0'
 
     // https://mvnrepository.com/artifact/net.spy/spymemcached
     compile group: 'net.spy', name: 'spymemcached', version: '2.12.3'
@@ -55,6 +55,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'com.google.truth:truth:0.30'
     testCompile 'org.mockito:mockito-core:1.9.5'
+    // https://mvnrepository.com/artifact/io.opencensus/opencensus-impl
+    testCompile group: 'io.opencensus', name: 'opencensus-impl', version: '0.18.0'
 }
 
 compileJava {
